--- a/css/variables.css
+++ b/css/variables.css
@@ -14,18 +14,50 @@
 }
 @keyframes heartBeat {
   0% {
-    transform: scale(0.5);
+    transform: scale(0.33);
   }
   25% {
-    transform: scale(1);
+    transform: scale(0.66);
   }
   50% {
-    transform: scale(1.5);
+    transform: scale(0.99);
   }
   75% {
-    transform: scale(1);
+    transform: scale(0.66);
   }
   100% {
-    transform: scale(0.5);
+    transform: scale(0.33);
+  }
+}
+@keyframes affixFadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes affixFadeIn {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes affixFadeOut {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes affixFadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
