--- a/css/styles.less
+++ b/css/styles.less
@@ -42,16 +42,8 @@ body, html {
     display: none !important;
 }
 
-@media @xl {
-    .mobile_hide {
-        display: block !important;
-    }
-}
-
-.scroll_hide {}
-
 h5 {
-    color: #000;
+    color: #FFF;
 
     &.hello {
         font-size: 2.5em;
@@ -72,75 +64,31 @@ h5 {
 }
 
 .home-page {
-  max-width: 100%;
-  width: 100%;
-nav {
-    z-index: 999;
-    top: 0;
-    left: 0;
-    right: 0;
-
-    &.navbar {
-        margin-bottom: 0 !important;
-    }
-
-    &.affix {
-        animation: affixFadeIn 1.25s  ease-in;
-        -webkit-animation: affixFadeIn 1.25s;
-    }
-
-    &.affix-top {
-        background-color: rgba(236,235,236, 1) !important;
-        border-color: rgba(236,235,236, 1) !important;
-        margin-top: -20px !important;
-
-        a {
-            color: #000;
-
-            &:hover {
-                color: #808080;
-            }
-        }
-
-        .navbar-brand {
-            font-size: 30px;
-            color: #000;
-
-            &:hover {
-                color: #808080;
-            }
-        }
-
+    max-width: 100%;
+    width: 100%;
+    
+    nav {
         #navbar {
-            display: none !important;
-        }
-
-        .navbar-toggle {
-            display: none !important;
-        }
-    }
-
-    #navbar {
-        ul {
-            li {
-                a {
-                    &.linkedin:hover {
-                        color: rgba(81, 127, 164, 1);
-                    }
-                    &.facebook:hover {
-                        color: rgba(59, 89, 152, 1);
-                    }
-                    &.twitter:hover {
-                        color: rgba(0, 172, 237, 1);
-                    }
-                    &.google:hover {
-                        color: rgba(221, 75, 57, 1);
+            ul {
+                li {
+                    a {
+                        &.linkedin:hover {
+                            color: rgba(81, 127, 164, 1);
+                        }
+                        &.facebook:hover {
+                            color: rgba(59, 89, 152, 1);
+                        }
+                        &.twitter:hover {
+                            color: rgba(0, 172, 237, 1);
+                        }
+                        &.google:hover {
+                            color: rgba(221, 75, 57, 1);
+                        }
                     }
                 }
             }
         }
     }
-}
   
 
   .content {
@@ -182,9 +130,7 @@ nav {
           left: 0;
           right: 0;
           text-align: center;
-          z-index: 99;
-
-          
+          z-index: 100
         }
 
         #outer-wrap {
@@ -265,6 +211,7 @@ nav {
       position: absolute;
       background: rgba(0, 0, 0, 0.4);
       width: 100%;
+      height: 100%;
     }
 
     video {
@@ -304,4 +251,67 @@ nav {
 }
 
 .video-container video.fillWidth {
+}
+
+
+@media @xs {
+}
+@media @sm {
+}
+@media @md {
+}
+
+@media @lg {
+
+}
+
+@media @xl {
+    .mobile_hide {
+        display: block !important;
+    }
+    nav {
+        z-index: 999;
+        top: 0;
+        left: 0;
+        right: 0;
+
+        &.navbar {
+            margin-bottom: 0 !important;
+        }
+
+        &.affix {
+            animation: affixFadeIn 1.25s  ease-in;
+            -webkit-animation: affixFadeIn 1.25s;
+        }
+
+        &.affix-top {
+            background-color: rgba(236,235,236, 1) !important;
+            border-color: rgba(236,235,236, 1) !important;
+
+            a {
+                color: #000;
+
+                &:hover {
+                    color: #808080;
+                }
+            }
+
+            .navbar-brand {
+                font-size: 30px;
+                color: #000;
+
+                &:hover {
+                    color: #808080;
+                }
+            }
+
+            #navbar {
+                display: none !important;
+            }
+
+            .navbar-toggle {
+                display: none !important;
+            }
+        }
+    }
 }
