--- a/css/styles.css
+++ b/css/styles.css
@@ -61,133 +61,12 @@
     opacity: 0;
   }
 }
-/* Reset */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+/*/* Reset 
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*/
 body {
   font: 13px/1.1 Helvetica, sans-serif;
   padding: 20px 0;
+  font-family: 'Lato';
 }
 p {
   line-height: 1.6;
@@ -210,29 +89,19 @@ header h1 {
 }
 body,
 html {
+  width: 100%;
   height: 100%;
   min-height: 100%;
   font-family: 'PT Sans', Arial, Helvetica, Verdana, sans-serif;
 }
+.centered {
+  text-align: center;
+}
+.bs {
+  margin-bottom: 80px;
+}
 .mobile_hide {
   display: none !important;
-}
-h5 {
-  color: #FFF;
-}
-h5.hello {
-  font-size: 2.5em;
-  animation: bounceIn 1s;
-}
-h5.jordan {
-  margin-top: 15px;
-  font-size: 2em;
-  opacity: 0;
-  animation: bounceIn 1s ease-in-out 1.45s forwards;
-}
-h5.jordan .fa-heart {
-  color: hotpink;
-  animation: heartBeat 1s ease-in-out 2.5s infinite;
 }
 .home-page {
   max-width: 100%;
@@ -250,85 +119,47 @@ h5.jordan .fa-heart {
 .home-page nav #navbar ul li a.google:hover {
   color: #dd4b39;
 }
-.home-page .content section {
+.home-page #intro_video {
   position: relative;
   width: 100% !important;
   min-width: 100%;
   margin: 0;
   padding: 0;
-  /*&#story-freext {
-        background: black;
-        height:1600px;
-
-        article {
-          height: 600px;
-        }
-
-        .parallax {
-          margin: 0;
-          height: 1600px;
-          position: absolute;
-          width: 100%;
-          top: 0;
-
-          &.background-shoes {
-            background: url(../img/nike-bg.jpeg) 50% 0 no-repeat fixed;
-            left: 0;
-          }
-
-          &.foreground-shoes {
-            background: url(../img/nike.png) 50% 0 no-repeat fixed;
-            left: 0;
-          }
-        }
-      }
-
-      &#bottle {
-        background: whitesmoke;
-        height:1200px;
-
-        .parallax {
-          background: url(../img/bottle.jpeg) 50% 0 no-repeat fixed;
-          margin: 0;
-          height: 1200px;
-          position: absolute;
-          top:0;left:0;
-          width:100%;
-        }
-      }*/
 }
-.home-page .content section h1 {
-  color: #4F9426;
-  width: 300px;
-  font-size: 65px;
-  margin-bottom: 14px;
-}
-.home-page .content section p {
-  color: black;
-  width: 300px;
-}
-.home-page .content section article {
-  position: relative;
-  top: 240px;
-  left: 40px;
-  width: 300px;
-  z-index: 4;
-}
-.home-page .content section#code-video {
-  position: relative;
-  background: url('../videos/Hello-World/Hello-World.jpg') no-repeat center;
-}
-.home-page .content section#code-video .text-content {
+.home-page #intro_video .text-content {
   color: #FFF;
   position: absolute;
-  top: 300px;
+  top: 30%;
   left: 0;
   right: 0;
   text-align: center;
   z-index: 100;
 }
-.home-page .content section#code-video #outer-wrap {
+.home-page #intro_video .text-content h5 {
+  color: #FFF;
+}
+.home-page #intro_video .text-content h5.hello {
+  font-size: 2em;
+  animation: bounceIn 1s;
+}
+.home-page #intro_video .text-content h5.jordan {
+  margin-top: 15px;
+  font-size: 1.5em;
+  opacity: 0;
+  animation: bounceIn 1s ease-in-out 1.45s forwards;
+}
+.home-page #intro_video .text-content h5.jordan .fa-heart {
+  color: hotpink;
+  animation: heartBeat 1s ease-in-out 2.5s infinite;
+}
+.home-page #intro_video #outer-wrap {
   display: none;
+}
+.home-page #about {
+  padding: 80px 0;
+}
+.home-page #about span {
+  font-size: 50px;
 }
 .parallax-item {
   position: absolute;
@@ -381,6 +212,12 @@ h5.jordan .fa-heart {
 @media (min-width: 992px) {
   .mobile_hide {
     display: block !important;
+  }
+  h5.hello {
+    font-size: 3em !important;
+  }
+  h5.jordan {
+    font-size: 2.5em !important;
   }
   nav {
     z-index: 999;
