--- a/css/styles.less
+++ b/css/styles.less
@@ -1,11 +1,12 @@
 @import "variables.less";
 
-/* Reset */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
+/*/* Reset 
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}*/
 
 body {
-  font:13px/1.1 Helvetica,sans-serif;
+  font: 13px/1.1 Helvetica,sans-serif;
   padding: 20px 0;
+  font-family: 'Lato';
 }
 
 p {
@@ -33,34 +34,23 @@ header {
 }
 
 body, html {
+    width: 100%;
     height: 100%;
     min-height: 100%;
     font-family: 'PT Sans', Arial, Helvetica, Verdana, sans-serif;
 }
 
-.mobile_hide {
-    display: none !important;
+.centered {
+    text-align: center;
 }
 
-h5 {
-    color: #FFF;
+.bs {
+    margin-bottom: 80px;
+}
 
-    &.hello {
-        font-size: 2.5em;
-        animation: bounceIn 1s;
-    }
-
-    &.jordan {
-        margin-top: 15px;
-        font-size: 2em;
-        opacity: 0;
-        animation: bounceIn 1s ease-in-out 1.45s forwards;
-
-        .fa-heart {
-            color: hotpink;
-        animation: heartBeat 1s ease-in-out 2.5s infinite;
-        }
-    }
+//Hide on mobile
+.mobile_hide {
+    display: none !important;
 }
 
 .home-page {
@@ -91,95 +81,58 @@ h5 {
     }
   
 
-  .content {
-    section {
+    #intro_video {
       position: relative;
       width: 100% !important;
       min-width: 100%;
       margin: 0;
       padding: 0;
-
-      h1 {
-        color: #4F9426;
-        width: 300px;
-        font-size: 65px;
-        margin-bottom: 14px;
-      }
-
-      p {
-        color: black;
-        width: 300px;
-      }
-
-      article {
-        position: relative;
-        top: 240px;
-        left: 40px;
-        width: 300px;
-        z-index: 4;
-      }
-
-      &#code-video {
-        position: relative;
-        background: url('../videos/Hello-World/Hello-World.jpg') no-repeat center;
-
         .text-content {
           color: #FFF;
           position: absolute;
-          top: 300px;
+          top: 30%;
           left: 0;
           right: 0;
           text-align: center;
-          z-index: 100
+          z-index: 100;
+
+            h5 {
+                color: #FFF;
+
+                &.hello {
+                    font-size: 2em;
+                    animation: bounceIn 1s;
+                }
+
+                &.jordan {
+                margin-top: 15px;
+                font-size: 1.5em;
+                opacity: 0;
+                animation: bounceIn 1s ease-in-out 1.45s forwards;
+
+                    .fa-heart {
+                    color: hotpink;
+                    animation: heartBeat 1s ease-in-out 2.5s infinite;
+                    }
+                }
+            }
         }
 
         #outer-wrap {
-          display: none;
+            display: none;
         }
-      }
-
-      /*&#story-freext {
-        background: black;
-        height:1600px;
-
-        article {
-          height: 600px;
-        }
-
-        .parallax {
-          margin: 0;
-          height: 1600px;
-          position: absolute;
-          width: 100%;
-          top: 0;
-
-          &.background-shoes {
-            background: url(../img/nike-bg.jpeg) 50% 0 no-repeat fixed;
-            left: 0;
-          }
-
-          &.foreground-shoes {
-            background: url(../img/nike.png) 50% 0 no-repeat fixed;
-            left: 0;
-          }
-        }
-      }
-
-      &#bottle {
-        background: whitesmoke;
-        height:1200px;
-
-        .parallax {
-          background: url(../img/bottle.jpeg) 50% 0 no-repeat fixed;
-          margin: 0;
-          height: 1200px;
-          position: absolute;
-          top:0;left:0;
-          width:100%;
-        }
-      }*/
     }
-  }
+
+    #about {
+        padding: 80px 0;
+        span {
+            font-size: 50px;
+        }
+    }
+
+    #contact {
+
+    }
 }
 
 
@@ -269,6 +222,16 @@ h5 {
     .mobile_hide {
         display: block !important;
     }
+
+    h5 {
+        &.hello {
+            font-size: 3em !important;
+        }
+        &.jordan {
+            font-size: 2.5em !important;
+        }
+    }
+
     nav {
         z-index: 999;
         top: 0;
