--- a/css/styles.css
+++ b/css/styles.css
@@ -68,25 +68,6 @@ body {
   padding: 20px 0;
   font-family: 'Lato';
 }
-p {
-  line-height: 1.6;
-}
-strong {
-  font-weight: bold;
-}
-header {
-  height: 100px;
-}
-header img {
-  float: left;
-  margin: 14px 0 0 14px;
-}
-header h1 {
-  margin-left: 14px;
-  float: left;
-  font-size: 20px;
-  line-height: 100px;
-}
 body,
 html {
   width: 100%;
@@ -98,25 +79,32 @@ html {
   text-align: center;
 }
 .bs {
-  margin-bottom: 80px;
+  margin-bottom: 30px;
+}
+.ts {
+  padding: 20px 0;
 }
 .mobile_hide {
   display: none !important;
+}
+.row {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
 .home-page {
   max-width: 100%;
   width: 100%;
 }
-.home-page nav #navbar ul li a.linkedin:hover {
+.home-page #navbar a.linkedin:hover {
   color: #517fa4;
 }
-.home-page nav #navbar ul li a.facebook:hover {
+.home-page #navbar a.facebook:hover {
   color: #3b5998;
 }
-.home-page nav #navbar ul li a.twitter:hover {
+.home-page #navbar a.twitter:hover {
   color: #00aced;
 }
-.home-page nav #navbar ul li a.google:hover {
+.home-page #navbar a.google:hover {
   color: #dd4b39;
 }
 .home-page #intro_video {
@@ -136,7 +124,7 @@ html {
   left: 0;
   right: 0;
   text-align: center;
-  z-index: 98;
+  z-index: 102;
 }
 .home-page #intro_video .text-content h5 {
   color: #FFF;
@@ -155,14 +143,37 @@ html {
   color: hotpink;
   animation: heartBeat 1s ease-in-out 2.5s infinite;
 }
-.home-page #intro_video #outer-wrap {
-  display: none;
+.home-page .portfolio {
+  background-color: #ecebec;
+  width: 100%;
+  height: 100%;
 }
-.home-page #about {
-  padding: 80px 0;
+.home-page .portfolio .portfolio_work {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  justify-content: center;
+  line-height: 30px;
 }
-.home-page #about span {
-  font-size: 50px;
+.home-page .portfolio .portfolio_work .pi {
+  height: auto;
+  width: 200px;
+  margin: 5px;
+  text-align: center;
+  vertical-align: middle;
+}
+.home-page .portfolio .portfolio_work .pi img {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  max-width: 100%;
 }
 .parallax-item {
   position: absolute;
@@ -212,9 +223,36 @@ html {
   bottom: 0;
   position: absolute;
 }
+@media (min-width: 480px) and (max-width:639px) {
+  .bs {
+    margin-bottom: 35px;
+  }
+  .ts {
+    padding: 35px 0;
+  }
+}
+@media (min-width: 640px) and (max-width:767px) {
+  .bs {
+    margin-bottom: 50px;
+  }
+  .ts {
+    padding: 45px 0;
+  }
+}
+@media (min-width: 768px) and (max-width:991px) {
+  .bs {
+    margin-bottom: 65px;
+  }
+  .ts {
+    padding: 60px 0;
+  }
+}
 @media (min-width: 992px) {
   .mobile_hide {
     display: block !important;
+  }
+  .bs {
+    margin-bottom: 80px;
   }
   nav {
     z-index: 999;
@@ -264,5 +302,8 @@ html {
   }
   h5.jordan {
     font-size: 2.5em !important;
+  }
+  .ts {
+    padding: 80px 0 !important;
   }
 }
